<resources>
    <string name="app_name">3310 Composer</string>

    <string name="action_save">Save</string>
    <string name="action_save_in_my_ringtones">Save in My ringtones</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_share_text">Share text</string>
    <string name="action_share_wav">Share *.wav</string>
    <string name="action_share_mp3">Share *.mp3</string>
    <string name="action_set_as_call_ringtone">Set as call ringtone</string>
    <string name="action_search">Search</string>
    <string name="action_rename">Rename</string>
    <string name="action_rate">Rate the app</string>
    <string name="action_open">Open</string>
    <string name="action_settings">Sound settings</string>
    <string name="action_quick_edit">Quick edit</string>
    <string name="action_help">Help</string>
    <string name="action_save_in_music">Save in music</string>
    <string name="action_save_in_cloud">Save in cloud</string>

    <string name="ringtone_tempo_label">Tempo</string>
    <string name="ringtones_label">Ringtones</string>
    <string name="my_ringtones_label">My ringtones</string>
    <string name="ringtones_cloud_label">Cloud</string>
    <string name="title_set_as_ringtone">Set as ringtone for:</string>
    <string name="ringtone_name_label">Name</string>
    <string name="key_press_label">Key press</string>

    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_call">Call</string>

    <string name="sampling_type_sin">Sinusoid</string>
    <string name="sampling_type_meander">Meander</string>
    <string name="sampling_type_saw">Saw</string>

    <string name="action_sort">Sort</string>
    <string name="sort_mode_newest">Newest first</string>
    <string name="sort_mode_alhpabet">By alhpabet</string>

    <string name="alert_title_success">Success</string>
    <string name="msg_saved">saved</string>
    <string name="msg_to_moderation">Your ringtone sent to moderation</string>
    <string name="msg_modify_system_settings">You need to allow modify system settings for this app. Then try again.</string>
    <string name="msg_need_permissions">You need to allow read/write external storage. Then try again.</string>
    <string name="msg_thank_you">Thank you very much</string>
    <string name="msg_help">0 - a musical space.\n
1 - Do.\n
2 - Re.\n
3 - Mi.\n
4 - Fa.\n
5 - Sol.\n
6 - La.\n
7 - Si.\n
8 - to increase the duration of a particular tone or musical space.\n
9 - to decrease the duration of a particular tone or musical space.\n
* - to change the octave for a particular tone (composer actually supports up to 3 octaves).\n
# - to make the current tone sharp (applicable for Do, Re, Fa, Sol, La only).\n
    </string>
    <string name="err_empty_name">The ringtone was not saved. The name cannot be empty.</string>
    <string name="err_double_name">The ringtone was not saved. The name must be unique.</string>

    <string name="ads_banner" translatable="false">ca-app-pub-6052365977112487/8857818250</string>
    <string name="ads_interstitial" translatable="false">ca-app-pub-6052365977112487/9920309054</string>
    <string name="ads_rewarded_video" translatable="false">ca-app-pub-6052365977112487/7862676254</string>

</resources>
