<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ComposerActivity">
    <item android:id="@+id/action_key_press" android:title="@string/key_press_label"
        android:orderInCategory="100" app:showAsAction="never"/>
    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:orderInCategory="300" app:showAsAction="never"/>
    <item android:id="@+id/action_set_as_ringtone" android:title="@string/action_set_as_call_ringtone"
        android:orderInCategory="400" app:showAsAction="never"/>
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="500" app:showAsAction="never"/>
</menu>
