<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DetailsActivity">
    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:orderInCategory="200" app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_save"/>
    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:orderInCategory="300" app:showAsAction="never"
        android:icon="@android:drawable/ic_delete"/>
    <item android:id="@+id/action_set_as_ringtone" android:title="@string/action_set_as_ringtone"
        android:orderInCategory="400" app:showAsAction="never"/>
    <item android:id="@+id/action_share" android:title="@string/action_share"
        android:orderInCategory="500" app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_share"/>
</menu>
